--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,8 +18,8 @@
                 <label for="password">Password:</label>
                 <input type="password" class="form-control" id="password" placeholder="********">
             </div>
-            <button type="submit" class="btn btn-primary" style="width: 20rem;">LOG IN</button>
-            <button id="registration" type="submit" class="btn btn-primary" style="width: 20rem;" onclick="showRegistrationWindow()">REGISTRATION</button>
+            <button id="login" type="submit" class="btn btn-primary" style="width: 20rem;">LOG IN</button>
+            <button id="registration" class="btn btn-primary" style="width: 20rem;">REGISTRATION</button>
             <div>
             </div>
         </form>
