--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -4,31 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../libs/bootstrap/css/bootstrap.min.css">
+</head>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <form style="width: 20rem;">
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="********">
-            </div>
-            <div class="form-group">
-                <label for="confirmPassword">Cofirm password:</label>
-                <input type="password" class="form-control" id="confirmPassword" placeholder="********">
-            </div>
-            <button id="register" class="btn btn-primary" style="width: 20rem;">REGISTER</button>
-        </form>
+<div class="container-fluid">
+    <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
     </div>
-    <script type="text/javascript"  src="../js/jquery-3.2.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../js/registration.js"></script>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" id="password" placeholder="********">
+    </div>
+    <div class="form-group">
+        <label for="confirmPassword">Cofirm password:</label>
+        <input type="password" class="form-control" id="confirmPassword" placeholder="********">
+    </div>
+    <button id="register" class="btn btn-primary" style="width: 20rem;">REGISTER</button>
+</div>
+<script type="text/javascript" src="../libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="../js/registration.js"></script>
 </body>
 
 </html>
