--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,30 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <form style="width: 20rem;">
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="********">
-            </div>
-            <button id="login" type="submit" class="btn btn-primary" style="width: 20rem;">LOG IN</button>
-            <button id="registration" class="btn btn-primary" style="width: 20rem;">REGISTRATION</button>
-            <div>
-            </div>
-        </form>
+<div class="container-fluid">
+    <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" id="password" placeholder="********">
+    </div>
+    <button id="login" type="submit" class="btn btn-primary" style="width: 20rem;">LOG IN</button>
+    <button id="registration"class="btn btn-primary" style="width: 20rem;">
+        REGISTRATION
+    </button>
+    <div>
+    </div>
+</div>
+<script type="text/javascript" src="libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
