--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -10,15 +10,15 @@
 
 <body>
 <div class="container-fluid">
-    <div class="form-group">
+    <div class="form-group email">
         <label for="email">Email address:</label>
         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
     </div>
-    <div class="form-group">
+    <div class="form-group password">
         <label for="password">Password:</label>
         <input type="password" class="form-control" id="password" placeholder="********">
     </div>
-    <div class="form-group">
+    <div class="form-group pasword">
         <label for="confirmPassword">Cofirm password:</label>
         <input type="password" class="form-control" id="confirmPassword" placeholder="********">
     </div>
@@ -26,6 +26,7 @@
 </div>
 <script type="text/javascript" src="../libs/juery/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="../js/registration.js"></script>
+<script type="text/javascript" src="../libs/lodash/lodash.core.js"></script>
 </body>
 
 </html>
