--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -14,13 +14,15 @@
         <label for="email">Email address:</label>
         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
     </div>
-    <div class="form-group password">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" placeholder="********">
-    </div>
-    <div class="form-group pasword">
-        <label for="confirmPassword">Cofirm password:</label>
-        <input type="password" class="form-control" id="confirmPassword" placeholder="********">
+    <div class="fewFieldsArea">
+        <div class="form-group password">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="********">
+        </div>
+        <div class="form-group confirmationPassword">
+            <label for="confirmPassword">Cofirm password:</label>
+            <input type="password" class="form-control" id="confirmPassword" placeholder="********">
+        </div>
     </div>
     <button id="register" class="btn btn-primary" style="width: 20rem;">REGISTER</button>
 </div>
