--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Registration</title>
     <link rel="stylesheet" href="../libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/errors.css">
 </head>
 </head>
 
