Refactor - move validation logic to one js file

--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -28,8 +28,8 @@
     <button id="register" class="btn btn-primary" style="width: 20rem;">REGISTER</button>
 </div>
 <script type="text/javascript" src="../libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="../js/validation.js"></script>
 <script type="text/javascript" src="../js/registration.js"></script>
-<script type="text/javascript" src="../libs/lodash/lodash.core.js"></script>
 </body>
 
 </html>
