--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,22 +9,26 @@
 
 <body>
 <div class="container-fluid">
-    <div class="form-group">
-        <label for="email">Email address:</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="user@email.com">
-    </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" placeholder="********">
+    <div class="fewFieldsArea">
+        <div class="form-group email">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                   placeholder="user@email.com">
+        </div>
+        <div class="form-group password">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="********">
+        </div>
     </div>
     <button id="login" type="submit" class="btn btn-primary" style="width: 20rem;">LOG IN</button>
-    <button id="registration"class="btn btn-primary" style="width: 20rem;">
+    <button id="registration" class="btn btn-primary" style="width: 20rem;">
         REGISTRATION
     </button>
     <div>
     </div>
 </div>
 <script type="text/javascript" src="libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="js/validation.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 
