Added validation for log-in page; refactor validation process: moved logic of combining errors to appropriate service

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/errors.css">
 </head>
 
 <body>
