[FE] Added webjars and required refactor: deleted all loaded FE libraries

--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
-    <link rel="stylesheet" href="../libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../webjars/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/errors.css">
 </head>
 </head>
@@ -27,7 +27,7 @@
     </div>
     <button id="register" class="btn btn-primary" style="width: 20rem;">REGISTER</button>
 </div>
-<script type="text/javascript" src="../libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="../js/validation.js"></script>
 <script type="text/javascript" src="../js/registration.js"></script>
 </body>
