--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="webjars/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/errors.css">
 </head>
 
@@ -28,7 +28,7 @@
     <div>
     </div>
 </div>
-<script type="text/javascript" src="libs/juery/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="js/validation.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
