--- a/src/main/resources/public/html/userProfile.html
+++ b/src/main/resources/public/html/userProfile.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User</title>
-</head>
-<body>
+<div class="container-fluid">
     <h3>You loged in!!!</h3>
-</body>
-</html>
+</div>
+<script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
