--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -29,6 +29,7 @@
     </div>
 </div>
 <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/jquery-cookie/jquery.cookie.js"></script>
 <script type="text/javascript" src="js/validation.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
