Added logic for getting userData

--- a/src/main/resources/public/html/userProfile.html
+++ b/src/main/resources/public/html/userProfile.html
@@ -2,3 +2,4 @@
     <h3>You loged in!!!</h3>
 </div>
 <script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="../js/userProfile.js"></script>
