Added functionality for updating user data

--- a/src/main/resources/public/html/userProfile.html
+++ b/src/main/resources/public/html/userProfile.html
@@ -1,5 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Registration</title>
+    <link rel="stylesheet" href="../webjars/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/errors.css">
+</head>
+</head>
+<body>
 <div class="container-fluid">
-    <h3>You loged in!!!</h3>
+    <div class="main-part">
+        <p><span id="f-name"></span>  <span id="l-name"></span></p>
+    </div>
+    <button id="change-profile" class="btn btn-primary" style="width: 20rem;">CHANGE PROFILE</button>
 </div>
 <script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="../js/userProfile.js"></script>
+</body>
+
+</html>
