--- a/src/main/resources/public/html/registration.html
+++ b/src/main/resources/public/html/registration.html
@@ -20,7 +20,7 @@
             <input type="password" class="form-control" id="password" placeholder="********">
         </div>
         <div class="form-group confirmationPassword">
-            <label for="confirmPassword">Cofirm password:</label>
+            <label for="confirmPassword">Confirm password:</label>
             <input type="password" class="form-control" id="confirmPassword" placeholder="********">
         </div>
     </div>
