Fixed changing user information functionallity

--- a/src/main/resources/public/html/userProfile.html
+++ b/src/main/resources/public/html/userProfile.html
@@ -16,6 +16,7 @@
     <button id="change-profile" class="btn btn-primary" style="width: 20rem;">CHANGE PROFILE</button>
 </div>
 <script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/jquery-cookie/jquery.cookie.js"></script>
 <script type="text/javascript" src="../js/userProfile.js"></script>
 </body>
 
