--- a/src/main/resources/public/html/userProfile-changeData.html
+++ b/src/main/resources/public/html/userProfile-changeData.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Registration</title>
-    <link rel="stylesheet" href="../webjars/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/errors.css">
-</head>
-</head>
-<body>
-<div class="fewFieldsArea">
-    <div class="form-group firstName">
+<div class="form-group firstName">
         <label for="firstName">First name:</label>
         <input type="text" class="form-control" id="firstName" placeholder="John">
     </div>
@@ -18,10 +6,5 @@
         <label for="lastName">Last name:</label>
         <input type="text" class="form-control" id="lastName" placeholder="Doe">
     </div>
-    <button id="change-profile" class="btn btn-primary" style="width: 20rem;">CHANGE PROFILE</button>
+    <button id="save-changes" class="btn btn-primary" style="width: 20rem;">SAVE CHANGES</button>
 </div>
-<script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="../js/userProfile-changeData.js"></script>
-</body>
-
-</html>
