Changed User id from String email to Integer id field; Changed rest for User from 'user' to 'users'

--- a/src/main/resources/public/html/userProfile.html
+++ b/src/main/resources/public/html/userProfile.html
@@ -14,6 +14,7 @@
         <p><span id="f-name"></span>  <span id="l-name"></span></p>
     </div>
     <button id="change-profile" class="btn btn-primary" style="width: 20rem;">CHANGE PROFILE</button>
+    <button id="find-friends" class="btn btn-primary" style="width: 20rem;">FIND FRIENDS</button>
 </div>
 <script type="text/javascript" src="../webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/jquery-cookie/jquery.cookie.js"></script>
